-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.3, 6.0.1
-
-
359df3230 (dev), 771cfca2a (6.7)
-
2023wk02FOQtforAndroid, 2023wk04FOQtforAndroid, 2023wk06FOQtforAndroid, 2023wk08FOQtforAndroid, 2023wk10FOQtforAndroid
A fix to QTBUG-78440 made QLibrary to automatically call JNI_OnLoad() from the loaded library on Android which breaks certain use cases where loading your own plugins that contains or it links to a 3rd party library containing the function, even when it is not desired.
For example, there are libraries that have two modes, one when it should be used from java applications and one for c++ applications. This new behavior can break that c++ interface.
- mentioned in
-
Page Loading...